--- a/GifMaker/Info.plist
+++ b/GifMaker/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>GIFIT</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -23,11 +23,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>GIFMaker would like to use your camera to create GIFs.</string>
+	<string>GIFIT would like to use your camera to create GIFs.</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>GIFMaker would like to use your microphone to create GIFs.</string>
+	<string>GIFIT would like to use your microphone to create GIFs.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>GIFMaker would like to use your photo library to create GIFs.</string>
+	<string>GIFIT would like to use your photo library to create GIFs.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
